@startuml components

package entities {
  struct Media {
    SourceID string
    TargetID string
  }

  struct CustomEntry {
    TvdbID uint64
  }

  struct CustomList <<alias>> {
    []CustomEntry
  }
}

package usecases {
  interface MediaLister {
    +Close() error
    +Generate(name string) CustomList
    +GetUserID(name string) string
    +MapIDs([]string) []string
    +Refresh()
  }

  interface Tracker {
    +GetMediaList(userId string) []Media
    +GetUserID(name string) string
  }

  interface Store {
    GetMedia(Context, string) (Media, error)
    GetMediaBulk(Context, []string) ([]Media, error)
    PutMedia(Context, media Media) error
    PutMediaBulk(Context, medias []Media) error
  }

  interface Provider {
    Fetch(Context, Getter) ([]Metadata, error)
    String() string
  }

  interface Metadata {
    GetSourceID() string
    GetTargetID() string
  }

  interface Cache {
    GetString(ctx, key) string
    SetString(ctx, key, value)
  }

  class MediaList
}

package adapters {
  class CachedTracker
  class JSONProvider
  class ChainCache
}

package drivers {
  package providers <<Frame>> {
    struct AnilistFribbsMetadata
    entity AnilistFribbsProvider
  }

  package trackers <<Frame>> {
    class Anilist
  }

  class Redis
  class Bolt
  class Badger
  class SQLite
  class Memory
}

package cmd {
  package api {
    class RestAPI <<net.http>>
    entity "main" as apiMain

    RestAPI o-- apiMain
  }

  package cli {
    entity "main" as cliMain
  }
}

'' visual hack to force both outer-level packages on the same rank
drivers -[hidden] cmd

'' entities
CustomEntry --* CustomList

'' use-cases
CustomList <-- MediaList
MediaLister <-- MediaList
Provider -> Metadata

MediaList o--> Tracker
MediaList o--> Provider
MediaList o--> Store
Provider <|-[dashed]- JSONProvider

'' adapters
Tracker <|-[dashed]- CachedTracker
Cache <|-[dashed]- ChainCache

CachedTracker o--> Cache
CachedTracker o--> Tracker

'' drivers
Metadata <|-[dashed]- AnilistFribbsMetadata
JSONProvider <|-- FribbsProvider

AnilistFribbsMetadata -* FribbsProvider

'' drivers
Cache <|-[dashed]- Badger
Cache <|-[dashed]- Bolt
Cache <|-[dashed]- Memory
Cache <|-[dashed]- Redis
Cache <|-[dashed]- SQLite

Store <|-[dashed]- Badger
Store <|-[dashed]- Memory
Store <|-[dashed]- SQLite

Tracker <|-[dashed]- Anilist

'' cmd
MediaLister <--o RestAPI

@enduml
